@@ -12,7 +12,6 @@ and testing of large number of features:
 45jqlakjrf87ayte7hy34ter4nguijauzl4eitk
 702b
 Abdó Roig-Maranges (aroig)
-aca
 afsheenb
 Afz
 agguser
@@ -251,6 +250,7 @@ Richard Benson
 Robert Pergl (perglr)
 Robert Sarkozi
 Roger Bongers
+rok (aca)
 Roland
 Roman Plášil (Quiark)
 Ross Hadden (rosshadden)
